@@ -28,14 +28,13 @@ import net.minecraft.world.InteractionHand;
 import net.minecraft.tags.TagKey;
 import net.minecraft.sounds.SoundSource;
 import net.minecraft.resources.ResourceLocation;
-import net.minecraft.core.Registry;
+import net.minecraft.core.registries.Registries;
 import net.minecraft.core.BlockPos;
 
 import net.mcreator.horde_hoard.init.HordeHoardModMobEffects;
 
 import javax.annotation.Nullable;
 
-import java.util.stream.Collectors;
 import java.util.List;
 import java.util.Comparator;
 
@@ -43,7 +42,7 @@ import java.util.Comparator;
 public class IntelligentTickProcedure {
 	@SubscribeEvent
 	public static void onEntityTick(LivingEvent.LivingTickEvent event) {
-		execute(event, event.getEntity().level, event.getEntity().getX(), event.getEntity().getY(), event.getEntity().getZ(), event.getEntity());
+		execute(event, event.getEntity().level(), event.getEntity().getX(), event.getEntity().getY(), event.getEntity().getZ(), event.getEntity());
 	}
 
 	public static void execute(LevelAccessor world, double x, double y, double z, Entity entity) {
@@ -54,19 +53,17 @@ public class IntelligentTickProcedure {
 		if (entity == null)
 			return;
 		boolean doo = false;
-		if (entity.getType().is(TagKey.create(Registry.ENTITY_TYPE_REGISTRY, new ResourceLocation("forge:intelligent_teams"))) || entity.getType().is(TagKey.create(Registry.ENTITY_TYPE_REGISTRY, new ResourceLocation("forge:intelligent_piglin")))) {
-			if (!(entity instanceof LivingEntity _livEnt ? _livEnt.hasEffect(HordeHoardModMobEffects.THINKING.get()) : false)) {
+		if (entity.getType().is(TagKey.create(Registries.ENTITY_TYPE, new ResourceLocation("forge:intelligent_teams"))) || entity.getType().is(TagKey.create(Registries.ENTITY_TYPE, new ResourceLocation("forge:intelligent_piglin")))) {
+			if (!(entity instanceof LivingEntity _livEnt2 && _livEnt2.hasEffect(HordeHoardModMobEffects.THINKING.get()))) {
 				if (!((entity instanceof Mob _mobEnt ? (Entity) _mobEnt.getTarget() : null) == null)) {
-					if (!(((entity instanceof LivingEntity _livEnt ? _livEnt.getMainHandItem() : ItemStack.EMPTY)).isEnchanted())) {
+					if (!((entity instanceof LivingEntity _livEnt ? _livEnt.getMainHandItem() : ItemStack.EMPTY).isEnchanted())) {
 						if ((entity instanceof LivingEntity _livEnt ? _livEnt.getMainHandItem() : ItemStack.EMPTY).getItem() == Items.BOW && !((entity instanceof Mob _mobEnt ? (Entity) _mobEnt.getTarget() : null) instanceof IronGolem)) {
 							{
 								final Vec3 _center = new Vec3(x, y, z);
-								List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(4.5 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center)))
-										.collect(Collectors.toList());
+								List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(4.5 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center))).toList();
 								for (Entity entityiterator : _entfound) {
 									if ((entity instanceof Mob _mobEnt ? (Entity) _mobEnt.getTarget() : null) == entityiterator
-											|| entityiterator.getType().is(TagKey.create(Registry.ENTITY_TYPE_REGISTRY, new ResourceLocation("forge:intelligent_teams")))
-													&& !(entity.getX() + entity.getZ() == entityiterator.getX() + entityiterator.getZ())) {
+											|| entityiterator.getType().is(TagKey.create(Registries.ENTITY_TYPE, new ResourceLocation("forge:intelligent_teams"))) && !(entity.getX() + entity.getZ() == entityiterator.getX() + entityiterator.getZ())) {
 										doo = true;
 										break;
 									} else {
@@ -76,7 +73,7 @@ public class IntelligentTickProcedure {
 							}
 							if (doo) {
 								if (entity instanceof LivingEntity _entity) {
-									ItemStack _setstack = new ItemStack(Blocks.AIR);
+									ItemStack _setstack = new ItemStack(Blocks.AIR).copy();
 									_setstack.setCount(1);
 									_entity.setItemInHand(InteractionHand.MAIN_HAND, _setstack);
 									if (_entity instanceof Player _player)
@@ -84,25 +81,23 @@ public class IntelligentTickProcedure {
 								}
 								if (world instanceof Level _level) {
 									if (!_level.isClientSide()) {
-										_level.playSound(null, new BlockPos(x, y, z), ForgeRegistries.SOUND_EVENTS.getValue(new ResourceLocation("item.armor.equip_generic")), SoundSource.HOSTILE, (float) 0.5, 1);
+										_level.playSound(null, BlockPos.containing(x, y, z), ForgeRegistries.SOUND_EVENTS.getValue(new ResourceLocation("item.armor.equip_generic")), SoundSource.HOSTILE, (float) 0.5, 1);
 									} else {
 										_level.playLocalSound(x, y, z, ForgeRegistries.SOUND_EVENTS.getValue(new ResourceLocation("item.armor.equip_generic")), SoundSource.HOSTILE, (float) 0.5, 1, false);
 									}
 								}
 								if (entity instanceof LivingEntity _entity)
 									_entity.swing(InteractionHand.MAIN_HAND, true);
-								if (entity instanceof LivingEntity _entity)
-									_entity.addEffect(new MobEffectInstance(HordeHoardModMobEffects.THINKING.get(), 40, 1, (false), (false)));
+								if (entity instanceof LivingEntity _entity && !_entity.level().isClientSide())
+									_entity.addEffect(new MobEffectInstance(HordeHoardModMobEffects.THINKING.get(), 40, 1, false, false));
 							}
 						} else if ((entity instanceof LivingEntity _livEnt ? _livEnt.getMainHandItem() : ItemStack.EMPTY).getItem() == Blocks.AIR.asItem()) {
 							{
 								final Vec3 _center = new Vec3(x, y, z);
-								List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(4.5 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center)))
-										.collect(Collectors.toList());
+								List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(4.5 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center))).toList();
 								for (Entity entityiterator : _entfound) {
 									if ((entity instanceof Mob _mobEnt ? (Entity) _mobEnt.getTarget() : null) == entityiterator
-											|| entityiterator.getType().is(TagKey.create(Registry.ENTITY_TYPE_REGISTRY, new ResourceLocation("forge:intelligent_teams")))
-													&& !(entity.getX() + entity.getZ() == entityiterator.getX() + entityiterator.getZ())) {
+											|| entityiterator.getType().is(TagKey.create(Registries.ENTITY_TYPE, new ResourceLocation("forge:intelligent_teams"))) && !(entity.getX() + entity.getZ() == entityiterator.getX() + entityiterator.getZ())) {
 										doo = false;
 										break;
 									} else {
@@ -112,7 +107,7 @@ public class IntelligentTickProcedure {
 							}
 							if (doo) {
 								if (entity instanceof LivingEntity _entity) {
-									ItemStack _setstack = new ItemStack(Items.BOW);
+									ItemStack _setstack = new ItemStack(Items.BOW).copy();
 									_setstack.setCount(1);
 									_entity.setItemInHand(InteractionHand.MAIN_HAND, _setstack);
 									if (_entity instanceof Player _player)
@@ -120,25 +115,23 @@ public class IntelligentTickProcedure {
 								}
 								if (world instanceof Level _level) {
 									if (!_level.isClientSide()) {
-										_level.playSound(null, new BlockPos(x, y, z), ForgeRegistries.SOUND_EVENTS.getValue(new ResourceLocation("item.crossbow.loading_end")), SoundSource.HOSTILE, (float) 0.5, 1);
+										_level.playSound(null, BlockPos.containing(x, y, z), ForgeRegistries.SOUND_EVENTS.getValue(new ResourceLocation("item.crossbow.loading_end")), SoundSource.HOSTILE, (float) 0.5, 1);
 									} else {
 										_level.playLocalSound(x, y, z, ForgeRegistries.SOUND_EVENTS.getValue(new ResourceLocation("item.crossbow.loading_end")), SoundSource.HOSTILE, (float) 0.5, 1, false);
 									}
 								}
 								if (entity instanceof LivingEntity _entity)
 									_entity.swing(InteractionHand.MAIN_HAND, true);
-								if (entity instanceof LivingEntity _entity)
-									_entity.addEffect(new MobEffectInstance(HordeHoardModMobEffects.THINKING.get(), 40, 1, (false), (false)));
+								if (entity instanceof LivingEntity _entity && !_entity.level().isClientSide())
+									_entity.addEffect(new MobEffectInstance(HordeHoardModMobEffects.THINKING.get(), 40, 1, false, false));
 							}
 						} else if ((entity instanceof LivingEntity _livEnt ? _livEnt.getMainHandItem() : ItemStack.EMPTY).getItem() == Items.CROSSBOW) {
 							{
 								final Vec3 _center = new Vec3(x, y, z);
-								List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(4.5 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center)))
-										.collect(Collectors.toList());
+								List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(4.5 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center))).toList();
 								for (Entity entityiterator : _entfound) {
-									if ((entity instanceof Mob _mobEnt ? (Entity) _mobEnt.getTarget() : null) == entityiterator
-											|| entityiterator.getType().is(TagKey.create(Registry.ENTITY_TYPE_REGISTRY, new ResourceLocation("forge:intelligent_piglin")))
-													&& !(entity.getX() + entity.getZ() == entityiterator.getX() + entityiterator.getZ())) {
+									if ((entity instanceof Mob _mobEnt ? (Entity) _mobEnt.getTarget() : null) == entityiterator || entityiterator.getType().is(TagKey.create(Registries.ENTITY_TYPE, new ResourceLocation("forge:intelligent_piglin")))
+											&& !(entity.getX() + entity.getZ() == entityiterator.getX() + entityiterator.getZ())) {
 										doo = true;
 										break;
 									} else {
@@ -148,7 +141,7 @@ public class IntelligentTickProcedure {
 							}
 							if (doo) {
 								if (entity instanceof LivingEntity _entity) {
-									ItemStack _setstack = new ItemStack(Items.GOLDEN_SWORD);
+									ItemStack _setstack = new ItemStack(Items.GOLDEN_SWORD).copy();
 									_setstack.setCount(1);
 									_entity.setItemInHand(InteractionHand.MAIN_HAND, _setstack);
 									if (_entity instanceof Player _player)
@@ -156,25 +149,23 @@ public class IntelligentTickProcedure {
 								}
 								if (world instanceof Level _level) {
 									if (!_level.isClientSide()) {
-										_level.playSound(null, new BlockPos(x, y, z), ForgeRegistries.SOUND_EVENTS.getValue(new ResourceLocation("item.armor.equip_generic")), SoundSource.HOSTILE, (float) 0.5, 1);
+										_level.playSound(null, BlockPos.containing(x, y, z), ForgeRegistries.SOUND_EVENTS.getValue(new ResourceLocation("item.armor.equip_generic")), SoundSource.HOSTILE, (float) 0.5, 1);
 									} else {
 										_level.playLocalSound(x, y, z, ForgeRegistries.SOUND_EVENTS.getValue(new ResourceLocation("item.armor.equip_generic")), SoundSource.HOSTILE, (float) 0.5, 1, false);
 									}
 								}
 								if (entity instanceof LivingEntity _entity)
 									_entity.swing(InteractionHand.MAIN_HAND, true);
-								if (entity instanceof LivingEntity _entity)
-									_entity.addEffect(new MobEffectInstance(HordeHoardModMobEffects.THINKING.get(), 40, 1, (false), (false)));
+								if (entity instanceof LivingEntity _entity && !_entity.level().isClientSide())
+									_entity.addEffect(new MobEffectInstance(HordeHoardModMobEffects.THINKING.get(), 40, 1, false, false));
 							}
 						} else if ((entity instanceof LivingEntity _livEnt ? _livEnt.getMainHandItem() : ItemStack.EMPTY).getItem() == Items.GOLDEN_SWORD) {
 							{
 								final Vec3 _center = new Vec3(x, y, z);
-								List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(4.5 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center)))
-										.collect(Collectors.toList());
+								List<Entity> _entfound = world.getEntitiesOfClass(Entity.class, new AABB(_center, _center).inflate(4.5 / 2d), e -> true).stream().sorted(Comparator.comparingDouble(_entcnd -> _entcnd.distanceToSqr(_center))).toList();
 								for (Entity entityiterator : _entfound) {
-									if ((entity instanceof Mob _mobEnt ? (Entity) _mobEnt.getTarget() : null) == entityiterator
-											|| entityiterator.getType().is(TagKey.create(Registry.ENTITY_TYPE_REGISTRY, new ResourceLocation("forge:intelligent_piglin")))
-													&& !(entity.getX() + entity.getZ() == entityiterator.getX() + entityiterator.getZ())) {
+									if ((entity instanceof Mob _mobEnt ? (Entity) _mobEnt.getTarget() : null) == entityiterator || entityiterator.getType().is(TagKey.create(Registries.ENTITY_TYPE, new ResourceLocation("forge:intelligent_piglin")))
+											&& !(entity.getX() + entity.getZ() == entityiterator.getX() + entityiterator.getZ())) {
 										doo = false;
 										break;
 									} else {
@@ -184,7 +175,7 @@ public class IntelligentTickProcedure {
 							}
 							if (doo) {
 								if (entity instanceof LivingEntity _entity) {
-									ItemStack _setstack = new ItemStack(Items.CROSSBOW);
+									ItemStack _setstack = new ItemStack(Items.CROSSBOW).copy();
 									_setstack.setCount(1);
 									_entity.setItemInHand(InteractionHand.MAIN_HAND, _setstack);
 									if (_entity instanceof Player _player)
@@ -192,19 +183,19 @@ public class IntelligentTickProcedure {
 								}
 								if (world instanceof Level _level) {
 									if (!_level.isClientSide()) {
-										_level.playSound(null, new BlockPos(x, y, z), ForgeRegistries.SOUND_EVENTS.getValue(new ResourceLocation("item.crossbow.loading_end")), SoundSource.HOSTILE, (float) 0.5, 1);
+										_level.playSound(null, BlockPos.containing(x, y, z), ForgeRegistries.SOUND_EVENTS.getValue(new ResourceLocation("item.crossbow.loading_end")), SoundSource.HOSTILE, (float) 0.5, 1);
 									} else {
 										_level.playLocalSound(x, y, z, ForgeRegistries.SOUND_EVENTS.getValue(new ResourceLocation("item.crossbow.loading_end")), SoundSource.HOSTILE, (float) 0.5, 1, false);
 									}
 								}
 								if (entity instanceof LivingEntity _entity)
 									_entity.swing(InteractionHand.MAIN_HAND, true);
-								if (entity instanceof LivingEntity _entity)
-									_entity.addEffect(new MobEffectInstance(HordeHoardModMobEffects.THINKING.get(), 40, 1, (false), (false)));
+								if (entity instanceof LivingEntity _entity && !_entity.level().isClientSide())
+									_entity.addEffect(new MobEffectInstance(HordeHoardModMobEffects.THINKING.get(), 40, 1, false, false));
 								if (entity instanceof ZombifiedPiglin) {
 									{
 										Entity _shootFrom = entity;
-										Level projectileLevel = _shootFrom.level;
+										Level projectileLevel = _shootFrom.level();
 										if (!projectileLevel.isClientSide()) {
 											Projectile _entityToSpawn = new Object() {
 												public Projectile getArrow(Level level, Entity shooter, float damage, int knockback) {
@@ -223,7 +214,7 @@ public class IntelligentTickProcedure {
 									}
 									if (world instanceof Level _level) {
 										if (!_level.isClientSide()) {
-											_level.playSound(null, new BlockPos(x, y, z), ForgeRegistries.SOUND_EVENTS.getValue(new ResourceLocation("item.crossbow.shoot")), SoundSource.HOSTILE, 1, 1);
+											_level.playSound(null, BlockPos.containing(x, y, z), ForgeRegistries.SOUND_EVENTS.getValue(new ResourceLocation("item.crossbow.shoot")), SoundSource.HOSTILE, 1, 1);
 										} else {
 											_level.playLocalSound(x, y, z, ForgeRegistries.SOUND_EVENTS.getValue(new ResourceLocation("item.crossbow.shoot")), SoundSource.HOSTILE, 1, 1, false);
 										}
